--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,12 @@ services:
     ports:
       - "4000:4000"
     env_file:
-      - .env
+      - .admission-env
+    environment:
+      - NODE_ENV=production
+      - DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:5432/$POSTGRES_DB
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
     depends_on:
       - db
       - redis
