--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "ioredis": "^4.27.9",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
