--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   admission-backend:
-    container_name: "${PREFIX}_admission-backend"
+    container_name: "${PREFIX}"
     build: .
     ports:
       - "4000:4000"
