revert docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.8'
+version: '3.9'
 
 services:
   admission-backend:
-    container_name: "${PREFIX}_admission-backend"
+    container_name: "${PREFIX}"
     build: .
     ports:
       - "4443:4000"
@@ -14,8 +14,8 @@ services:
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
     networks:
-      - backend
+      - kidzania-park-operation_backend
 
 networks:
-  backend:
+  kidzania-park-operation_backend:
     external: true
