update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   admission-backend:
-    container_name: "${PREFIX}_admission-backend"
+    container_name: "${PREFIX}"
     build: .
     ports:
       - "4443:4000"
@@ -15,9 +15,6 @@ services:
       - REDIS_PORT=${REDIS_PORT}
     networks:
       - kidzania-park-operation_backend
-    depends_on:
-      - redis
-      - postgres
 
 networks:
   kidzania-park-operation_backend:
