--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.4.0",
     "https": "^1.0.0",
     "ioredis": "^4.27.9",
     "morgan": "^1.10.0",
