--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,31 @@ version: '3.8'
 
 services:
   admission-backend:
-    container_name: "${PREFIX:-admission}-backend-${ENV:-dev}"
+    image: ${DOCKER_REGISTRY:-localhost}/admission-backend:${TAG:-latest}
     build:
       context: .
       dockerfile: Dockerfile
       args:
         NODE_ENV: ${NODE_ENV:-production}
-    image: ${DOCKER_REGISTRY:-localhost}/${PREFIX:-admission}-backend:${TAG:-latest}
     ports:
       - "${HOST_PORT:-4443}:${CONTAINER_PORT:-4000}"
-    env_file:
-      - ../.admission-env
     environment:
       - NODE_ENV=${NODE_ENV:-production}
-      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_DB=${POSTGRES_DB}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
     volumes:
       - ./logs:/app/logs
       - ./certs:/app/certs
     networks:
-      - kidzania-park-operation_backend
+      - backend
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
     healthcheck:
       test: ["CMD", "curl", "-f", "https://localhost:${CONTAINER_PORT:-4000}/health || exit 1"]
       interval: 30s
@@ -31,5 +35,6 @@ services:
       start_period: 40s
 
 networks:
-  kidzania-park-operation_backend:
+  backend:
     external: true
+    name: kidzania-park-operation_backend
