--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       args:
         NODE_ENV: ${NODE_ENV:-production}
     ports:
-      - "${HOST_PORT:-4443}:${CONTAINER_PORT:-4000}"
+      - 4443:${CONTAINER_PORT:-4000}
     environment:
       - NODE_ENV=${NODE_ENV:-production}
       - POSTGRES_USER=${POSTGRES_USER}
