--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       args:
         NODE_ENV: ${NODE_ENV:-production}
     ports:
-      - PORT_PLACEHOLDER
+      - "${HOST_PORT:-4443}:${CONTAINER_PORT:-4000}"
     environment:
       - NODE_ENV=${NODE_ENV:-production}
       - POSTGRES_USER=${POSTGRES_USER}
@@ -21,10 +21,6 @@ services:
       - ./certs:/app/certs
     networks:
       - backend
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
     healthcheck:
       test: ["CMD", "curl", "-k", "-f", "https://localhost:${CONTAINER_PORT:-4000}/health || exit 1"]
       interval: 30s
