--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "express-rate-limit": "^7.4.0",
@@ -19,6 +20,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
     "socket.io": "^4.1.3",
-    "winston": "^3.13.1"
+    "winston": "^3.13.1",
+    "ws": "^8.18.0"
   }
 }
