--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "helmet": "^7.1.0",
     "https": "^1.0.0",
     "ioredis": "^4.27.9",
+    "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
+    "ntp-time-sync": "^0.4.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
